<resources>
    <string name="app_name">EnglishDiary</string>
    <string name="correction_button">添削してもらう！</string>
    <string name="english_composition_field_hint">英作文してみましょう...</string>
    <string name="network_error_message">ネットワーク通信に失敗しました</string>
    <string name="reload">再読み込み</string>
    <string name="follow_system">システムにしたがう</string>
    <string name="light">ライト</string>
    <string name="dark">ダーク</string>
    <string name="dark_mode">ダークモード</string>
    <string name="setting">設定</string>
    <string name="dairy_example_text_length">文の長さ</string>
    <string name="short_length">短い</string>
    <string name="medium_length">ふつう</string>
    <string name="long_length">長い</string>
</resources>