<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/dialog_background"
        android:padding="32dp"
        tools:context=".ui.SettingDialogFragment">

        <TextView
            android:id="@+id/setting_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/border_setting"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="16dp"
            android:background="?attr/colorSecondaryContainer"
            app:layout_constraintTop_toBottomOf="@+id/setting_text" />

        <TextView
            android:id="@+id/dark_mode_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            android:layout_marginVertical="16dp"
            app:layout_constraintTop_toBottomOf="@+id/border_setting" />

        <RadioGroup
            android:id="@+id/dark_mode_preference_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            app:layout_constraintTop_toBottomOf="@+id/dark_mode_text">

            <RadioButton
                android:id="@+id/follow_system_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/follow_system"/>

            <RadioButton
                android:id="@+id/light_mode_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/light"/>

            <RadioButton
                android:id="@+id/dark_mode_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dark"/>
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>